--- a/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
+++ b/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
@@ -1,1 +1,12 @@
-<p>Special works</p>
+<div class="background"></div>
+<div class="wrapper">
+
+    <div class="imgContainer">
+            <div><img src="/burgers-menu/public/bacondoble.png" alt=""></div>
+            <div><img src="/burgers-menu/public/triple.png" alt=""></div>
+            <div><img src="/burgers-menu/public/lechugaytomate.png" alt=""></div>
+    </div>
+
+    <app-sburgers></app-sburgers>
+
+</div>
