--- a/burgers-menu/src/app/specialburgers-menu/sburgers/sburgers.html
+++ b/burgers-menu/src/app/specialburgers-menu/sburgers/sburgers.html
@@ -2,10 +2,10 @@
     
     <ul class="special-list">
         @for (special of specialBurgers; track special.id) {
-            <div class="special-item">
-                <li>{{special.burger}}</li>
-                <li>{{special.price}}</li>
-            </div>
+            <li class="special-item-container">
+                <div>{{special.burger}}</div>
+                <div>{{special.price}}</div>
+            </li>
         }
     </ul>
 
