--- a/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
+++ b/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
@@ -2,9 +2,9 @@
 <div class="wrapper">
 
     <div class="imgContainer">
-            <div><img src="/burgers-menu/public/bacondoble.png" alt=""></div>
-            <div><img src="/burgers-menu/public/triple.png" alt=""></div>
-            <div><img src="/burgers-menu/public/lechugaytomate.png" alt=""></div>
+            <div><img src="bacondoble.png" alt=""></div>
+            <div><img src="triple.png" alt=""></div>
+            <div><img src="lechugaytomate.png" alt=""></div>
     </div>
 
     <app-sburgers></app-sburgers>
