--- a/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
+++ b/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
 
     <div class="imgContainer">
-            <div><img src="bacondoble.png" alt=""></div>
+            <div><img src="bacondoble2.png" alt=""></div>
             <div><img src="triple.png" alt=""></div>
             <div><img src="lechugaytomate.png" alt=""></div>
     </div>
