--- a/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.scss
+++ b/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.scss
@@ -10,6 +10,8 @@
         background: url('https://www.transparenttextures.com/patterns/food.png');
         background-color: #b35400;
         background-repeat: repeat;
+        animation: moveBackground 50s linear both infinite;
+        animation-delay: -1s;
         z-index: -1;
         
     }
@@ -22,6 +24,7 @@
         width: 100%;
         height: auto;
         overflow-x: hidden;
+        gap: 0px;
         
     }
 
@@ -45,17 +48,16 @@
         width: clamp(650px, 50vw, 680px);
         height: 400px;
         
-        filter: drop-shadow(0px 25px 30px #1117);
+        filter: drop-shadow(0px 25px 20px #111);
     }
 
     div:has(>img):first-child, div:has(> img):last-child {
-        top: 50px;
+        top:  50px;
         left: 350px;
     }
 
     div:has(>img):nth-child(2)  {
         width: 700px;
-        
     }
 
 
@@ -68,7 +70,28 @@
     img {
         width: 100%;
         height: 100%;
-        filter: brightness(0.92) contrast(0.85) saturate(1.15) sepia(0.05);
+        filter: brightness(0.92) contrast(.85) saturate(1.15) sepia(.1);
     }
     
+
+
+    /* ANIMACIONES */
+
+        @keyframes appear {
+            to {
+            opacity: 1;
+            margin-top: 50px;
+        }
+    }   
+    @keyframes moveBackground {
+        from {
+            background-position: 0 0; /* Posición inicial */
+        }
+        to {
+            background-position: 100% 100%; /* Posición final */
+        }
+        }
 }
+
+
+
