cambiando la lista a un solo componente

--- a/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
+++ b/burgers-menu/src/app/specialburgers-menu/specialburgers-menu.html
@@ -7,6 +7,6 @@
             <div><img src="lechugaytomate.png" alt=""></div>
     </div>
 
-    <app-sburgers></app-sburgers>
+    <app-productslist [productsList]="specialProducts"></app-productslist>
 
 </div>
